* Fixed issue caused by overview-panel-item-data overflow fix

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/chat.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/chat.scss
@@ -874,8 +874,6 @@
   flex-flow: row nowrap;
   flex-grow: 1;
   flex-shrink: 1;
-  max-width: 26px;
-  width: 26px;
 }
 
 // Chat window resizer
